force-app/main/default/objects/Email_Customer_Settings__c/Email_Customer_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Customer Settings</label>
</CustomObject>