force-app/main/default/objects/Email_Customer_Settings__c/fields/Account_Statement_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Account_Statement_Not_Allowed__c</fullName>
    <label>Account Statement Not Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>