force-app/main/default/objects/Email_Customer_Settings__c/fields/Email_Org_Wide_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Org_Wide_Address_Id__c</fullName>
    <label>Email Org Wide Address Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>