force-app/main/default/objects/Email_Customer_Settings__c/fields/Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates__c</fullName>
    <description>List of email template Ids</description>
    <label>Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>