force-app/main/default/objects/Email_Customer_Settings__c/fields/Template_Header__c.field-meta.xml
<CustomField>
    <fullName>Template_Header__c</fullName>
    <label>Template Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>